Edited wiki page Roadmap through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -1,8 +1,18 @@
 #summary Планы на ближайшее будущее
+
 = Introduction =
 
-Необходимо определить перечень задач с приоритетами на ближайшее будущее  в виде плана
+Необходимо определить перечень задач с приоритетами на ближайшее будущее  в виде плана (по состоянию на 09.05.2013)
 
-= Details =
+= План =
 
-# Добавить адаптивную настройку аналоговых входов и выходов аналогичным способом как в проекте boiler-control
+  # Добавить адаптивную настройку аналоговых входов и выходов аналогичным способом как в проекте boiler-control
+  # Исправить отображение процентов отдельно для:
+    * регулирования крана 
+    * регулирования вентилятора
+  # Ввести дни недели (реализовано в boiler-control)
+  # Ввести автоматическую прокрутку крана по графику (реализовано в boiler-control)
+  # Навести порядок с alert и alarms
+  # Открыть возможность просмотра последних аварийных событий в режиме инженерной наладки
+  # Добавить вывод даты и времени на экран для аварийного события
+  # В режиме инженерной наладки добавить возможность принудительного запуска/остановки вентиляции
