Edited wiki page Roadmap through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -6,6 +6,7 @@
 
 = План =
 
+  # Добавить вывод версии на LCD при старте
   # Добавить адаптивную настройку аналоговых входов и выходов аналогичным способом как в проекте boiler-control
   # Исправить отображение процентов отдельно для:
     * регулирования крана 
