Edited wiki page Roadmap through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -17,3 +17,4 @@
   # Открыть возможность просмотра последних аварийных событий в режиме инженерной наладки
   # Добавить вывод даты и времени на экран для аварийного события
   # В режиме инженерной наладки добавить возможность принудительного запуска/остановки вентиляции
+  # Неустойчивое поведение Valcoder при использования одного клика
