Edited wiki page Roadmap through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -7,6 +7,7 @@
 = План =
 
   # Добавить вывод версии на LCD при старте
+    Реализовано тут [http://code.google.com/p/robowater-atmega32-cvv/source/detail?r=20 r20]
   # Добавить адаптивную настройку аналоговых входов и выходов аналогичным способом как в проекте boiler-control
   # Исправить отображение процентов отдельно для:
     * регулирования крана 
