Edited wiki page InitTheTermometers through web user interface.

--- a/wiki/InitTheTermometers.wiki
+++ b/wiki/InitTheTermometers.wiki
@@ -25,3 +25,8 @@
   # Создание массива неинициализированных термометров 
   # Функция печати адреса термометра без 1-го и последнего байта
   # Ввести в *menu.c* тип e_address, по которому функция par_str будет выводить адрес термометра, а функция lcd_edit будет подставлять номер элемента в массиве неинициализированных термометров
+
+На сегодняшний момент добавлено 4 пункта в меню тонкие настройки. См. menu.c 
+{{{
+struct st_parameter settings[NUM_SETTINGS]
+}}}
