--- a/wiki/InitTheTermometers.wiki
+++ b/wiki/InitTheTermometers.wiki
@@ -26,7 +26,10 @@
   # Функция печати адреса термометра без 1-го и последнего байта
   # Ввести в *menu.c* тип e_address, по которому функция par_str будет выводить адрес термометра, а функция lcd_edit будет подставлять номер элемента в массиве неинициализированных термометров
 
-На сегодняшний момент добавлено 4 пункта в меню тонкие настройки. См. menu.c 
+Остановились на файле menu.c (line 150)
 {{{
-struct st_parameter settings[NUM_SETTINGS]
+        // Здесь будет синхронизация массива подключенных термометров
+        for (i = 0; i < MAX_DS1820; i++) {
+            
+        }
 }}}
