Edited wiki page Roadmap through web user interface.

--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -9,13 +9,20 @@
   # Добавить вывод версии на LCD при старте
     Реализовано тут [http://code.google.com/p/robowater-atmega32-cvv/source/detail?r=20 r20]
   # Добавить адаптивную настройку аналоговых входов и выходов аналогичным способом как в проекте boiler-control
+    Реализовано тут [http://code.google.com/p/robowater-atmega32-cvv/source/detail?r=28 r28]
   # Исправить отображение процентов отдельно для:
     * регулирования крана 
     * регулирования вентилятора
+    Выполнено
   # Ввести дни недели (реализовано в boiler-control)
+    Выполнено
   # Ввести автоматическую прокрутку крана по графику (реализовано в boiler-control)
+    Выполнено
+  # Неустойчивое поведение Valcoder при использования одного клика
+    Выполнено. Реализовано тут [http://code.google.com/p/robowater-atmega32-cvv/source/detail?r=28 r28]
   # Навести порядок с alert и alarms
+    переименованы Alerts в Warnings. Реализовано тут [http://code.google.com/p/robowater-atmega32-cvv/source/detail?r=44 R44]
+  # В режиме инженерной наладки добавить возможность принудительного запуска/остановки вентиляции
+  # Внедрить алгоритм ПИД разработанный в AVR: AN 231
   # Открыть возможность просмотра последних аварийных событий в режиме инженерной наладки
   # Добавить вывод даты и времени на экран для аварийного события
-  # В режиме инженерной наладки добавить возможность принудительного запуска/остановки вентиляции
-  # Неустойчивое поведение Valcoder при использования одного клика
